<?xml version="1.0"?>
<package>
  <name>master_bridge</name>
  <version>0.0.0</version>
  <description>The multimaster package</description>
  <maintainer email="ybcho@xytron.co.kr">ybcho</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
